test/pass/success_multiple/src/SuccessMultiple.hx
package;

class SuccessMultiple {
	public static function identity<T>(x:T):T {
		return x;
	}
}
