test/error/compile_error_empty_test/src/CompileErrorEmptyTest.hx
package;

class CompileErrorEmptyTest {
	public static function identity<T>(x:T):T {
		return x;
	}
}
